fixed letter spacing in kurdish class

--- a/public/partials.scss
+++ b/public/partials.scss
@@ -308,6 +308,7 @@ body {
 .kurdish {
     font-family: var(--kurdish-font-family) !important;
     line-height: 160% !important;
+    letter-spacing: 0 !important;
 }
 
 // removing outline for inputs
